doll_shop/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doll-shop-api
spec:
  selector:
    app: doll-shop-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9999
  type: ClusterIP
